Added lombok, Fix all the code smells but one